Update and rename tier.html to kural.html

--- a/kural.html
+++ b/kural.html
@@ -99,12 +99,12 @@
         <div class="rule">
             <div class="rule-number">1</div>
             <h2>Emergency Rule</h2>
-            <p>Eğer maçtan önce 1 saat içinde oyuncu alındıysa karşı takım 1-0 önde başlar. Eğer maç içinde emergency alınırsa karşı takıma +2 gol verilir.</p>
+            <p>Eğer maçtan önce 1 saat içinde oyuncu alındıysa karşı takım 1-0 önde başlar. Eğer maç içinde emergency alınırsa karşı takıma +2 goal verilir.</p>
         </div>
         <div class="rule">
             <div class="rule-number">2</div>
             <h2>Loan Rule</h2>
-            <p>Sadece maçın kaderini değiştirmeyecek belli kişiler loan alınabilir ve her sezon takım başına ligde maksimum 2, kupada ise 1 loan alınabilir. Fazlası alınırsa karşı takıma auto verilir.</p>
+            <p>Sadece maçın kaderini değiştirmeyecek belli kişiler loan alınabilir (tickettan bu izni alabilirsiniz) ve her sezon takım başına ligde maksimum 2, kupada ise 1 loan alınabilir. Fazlası alınırsa karşı takıma auto verilir.</p>
         </div>
         <div class="rule">
             <div class="rule-number">3</div>
@@ -114,17 +114,17 @@
         <div class="rule">
             <div class="rule-number">4</div>
             <h2>PB</h2>
-            <p>Defans oyuncusu kendi kalecisine yerden pas atarsa ve kaleci eline alırsa 1/2. Eğer 2 kere yapılırsa +1.</p>
+            <p>Eğer defans oyuncusu kendi kalecisine yerden pas atarsa ve kaleci eline alırsa 1/2'dir. Eğer 2 kere yapılırsa karşı takıma +1’dir.</p>
         </div>
         <div class="rule">
             <div class="rule-number">5</div>
             <h2>CK Rush</h2>
-            <p>Korner kullanan oyuncuya rush yapmak 1/2'dir. 2. kez yapılırsa yc, 3. kez yapılırsa 2. yc verilir.</p>
+            <p>Korner kullanan oyuncuya rush 1/2'dir. 2. yapımında yc verilir. 3. yapımında 2. yc verilir.</p>
         </div>
         <div class="rule">
             <div class="rule-number">6</div>
             <h2>Last</h2>
-            <p>Eğer gole giden bir oyuncuya karşı takım kayarsa (önünde başka oyuncu olmama şartıyla) +1 gol ve yc verilir.</p>
+            <p>Eğer gole giden bir oyuncuya karşı takım kayarsa (önünde başka oyuncu olmama şartıyla) +1 goal + yc verilir.</p>
         </div>
         <div class="rule">
             <div class="rule-number">7</div>
@@ -134,23 +134,47 @@
         <div class="rule">
             <div class="rule-number">8</div>
             <h2>Last CB</h2>
-            <p>Eğer ataktayken karşı takımın stoperine kayıp gol atarsanız gol iptali ve yc verilir.</p>
+            <p>Eğer ataktayken karşı takımın stoperine kayıp gol atarsanız gol iptali + yc verilir.</p>
         </div>
         <div class="rule">
             <div class="rule-number">9</div>
             <h2>Visu, 3x, 4x, 5x</h2>
             <p>Bunun gibi kombinasyonlar hem şutta hem de pasta yasaktır. 1/2'dir, 2. yapılışında yc verilir.</p>
         </div>
-        <!-- Tüm kuralları buraya eklersiniz -->
         <div class="rule">
-            <div class="rule-number">36</div>
-            <h2>GK Combo</h2>
-            <p>GK'da her türlü kombinasyon yasaktır. (örneğin: x lmb). Cezası yc'dir.</p>
+            <div class="rule-number">10</div>
+            <h2>PB</h2>
+            <p>Santrada geri pas zorunludur, cezası yc'dir.</p>
+        </div>
+        <div class="rule">
+            <div class="rule-number">11</div>
+            <h2>Yayın</h2>
+            <p>Maça yayın açılmadan başlanamaz. Eğer rakip istemiyorsa hostlayan takım yayını açmak zorundadır. Eğer tartışmalı bir pozisyonda clip alınmamışsa boşuna dil dökmenize gerek yoktur, telafisi olmaz.</p>
+        </div>
+        <div class="rule">
+            <div class="rule-number">12</div>
+            <h2>RQ Rule</h2>
+            <p>Teknik direktör komutu olmadan (değişiklik vs.), bir sebebi olmadan ayrılan oyunculara moderatör hükmüyle 1 maç ceza verilir.</p>
+        </div>
+        <div class="rule">
+            <div class="rule-number">13</div>
+            <h2>Maç Oynanması</h2>
+            <p>Her takımda en az 3 oyuncu olmak zorundadır, aksi takdirde auto verilir. Eğer karşı takım 10 dakika içinde gelmezse bekleyen takıma auto verilir. Eğer 2 takımda gelmezse 2 takıma da 1 puan verilir.</p>
+        </div>
+        <div class="rule">
+            <div class="rule-number">14</div>
+            <h2>Kırmızı Kart</h2>
+            <p>2 yc'den rc yerseniz maçtan çıkmak zorundasınız. Eğer hakem söyledikten sonra maçtan çıkmayıp topa dokunursanız direkt auto verilir. Kırmızının cezası 1 maçtır, lig ve kupa maçları aynı kabul edilir.</p>
+        </div>
+        <div class="rule">
+            <div class="rule-number">15</div>
+            <h2>Kaçak Oyuncu</h2>
+            <p>Ligde olmayan, takımda olmayan oyuncu oynarsa karşı takıma auto verilir. Eğer karşı takım bunu bilmeden oynarsa o zaman diğer takımın oynadığı oyuncu da geçersiz sayılacaktır. (Hikayeyi ne kadar değiştirme veya yalan söyleme hakkınız yoktur)</p>
         </div>
     </div>
 
     <footer>
-        © 2025 FFA Maç Kuralları
+        <p>© 2025 FFA Maç Kuralları. Tüm hakları saklıdır.</p>
     </footer>
 </body>
 </html>
