--- a/kural.html
+++ b/kural.html
@@ -96,85 +96,226 @@
     <h1>FFA Maç Kuralları</h1>
 
     <div class="container">
+        <!-- Kural 1 -->
         <div class="rule">
             <div class="rule-number">1</div>
             <h2>Emergency Rule</h2>
             <p>Eğer maçtan önce 1 saat içinde oyuncu alındıysa karşı takım 1-0 önde başlar. Eğer maç içinde emergency alınırsa karşı takıma +2 goal verilir.</p>
         </div>
+        <!-- Kural 2 -->
         <div class="rule">
             <div class="rule-number">2</div>
             <h2>Loan Rule</h2>
             <p>Sadece maçın kaderini değiştirmeyecek belli kişiler loan alınabilir (tickettan bu izni alabilirsiniz) ve her sezon takım başına ligde maksimum 2, kupada ise 1 loan alınabilir. Fazlası alınırsa karşı takıma auto verilir.</p>
         </div>
+        <!-- Kural 3 -->
         <div class="rule">
             <div class="rule-number">3</div>
             <h2>3. Parti Yazılım</h2>
             <p>Clumsy, VPN, Script, FastFlag gibi yazılımlar yasaktır. (Roblox’un Yasaklanması gibi olağan şeyler dışında)</p>
         </div>
+        <!-- Kural 4 -->
         <div class="rule">
             <div class="rule-number">4</div>
             <h2>PB</h2>
-            <p>Eğer defans oyuncusu kendi kalecisine yerden pas atarsa ve kaleci eline alırsa 1/2'dir. Eğer 2 kere yapılırsa karşı takıma +1’dir.</p>
+            <p>Defans oyuncusu kendi kalecisine yerden pas atarsa ve kaleci eline alırsa 1/2. Eğer 2 kere yapılırsa +1.</p>
         </div>
+        <!-- Kural 5 -->
         <div class="rule">
             <div class="rule-number">5</div>
             <h2>CK Rush</h2>
-            <p>Korner kullanan oyuncuya rush 1/2'dir. 2. yapımında yc verilir. 3. yapımında 2. yc verilir.</p>
+            <p>Korner kullanan oyuncuya rush yapmak 1/2'dir. 2. kez yapılırsa yc, 3. kez yapılırsa 2. yc verilir.</p>
         </div>
+        <!-- Kural 6 -->
         <div class="rule">
             <div class="rule-number">6</div>
             <h2>Last</h2>
-            <p>Eğer gole giden bir oyuncuya karşı takım kayarsa (önünde başka oyuncu olmama şartıyla) +1 goal + yc verilir.</p>
+            <p>Eğer gole giden bir oyuncuya karşı takım kayarsa (önünde başka oyuncu olmama şartıyla) +1 gol ve yc verilir.</p>
         </div>
+        <!-- Kural 7 -->
         <div class="rule">
             <div class="rule-number">7</div>
             <h2>Leave Ball</h2>
             <p>Eğer rakip takımdan bir oyuncuya kayıp topu alırsanız geri bırakmak zorundasınız. Eğer dokunursanız veya 3 saniye dolmadan topu alırsanız yc verilir.</p>
         </div>
+        <!-- Kural 8 -->
         <div class="rule">
             <div class="rule-number">8</div>
             <h2>Last CB</h2>
-            <p>Eğer ataktayken karşı takımın stoperine kayıp gol atarsanız gol iptali + yc verilir.</p>
+            <p>Eğer ataktayken karşı takımın stoperine kayıp gol atarsanız gol iptali ve yc verilir.</p>
         </div>
+        <!-- Kural 9 -->
         <div class="rule">
             <div class="rule-number">9</div>
             <h2>Visu, 3x, 4x, 5x</h2>
             <p>Bunun gibi kombinasyonlar hem şutta hem de pasta yasaktır. 1/2'dir, 2. yapılışında yc verilir.</p>
         </div>
+        <!-- Kural 10 -->
         <div class="rule">
             <div class="rule-number">10</div>
             <h2>PB</h2>
             <p>Santrada geri pas zorunludur, cezası yc'dir.</p>
         </div>
+        <!-- Kural 11 -->
         <div class="rule">
             <div class="rule-number">11</div>
             <h2>Yayın</h2>
             <p>Maça yayın açılmadan başlanamaz. Eğer rakip istemiyorsa hostlayan takım yayını açmak zorundadır. Eğer tartışmalı bir pozisyonda clip alınmamışsa boşuna dil dökmenize gerek yoktur, telafisi olmaz.</p>
         </div>
+        <!-- Kural 12 -->
         <div class="rule">
             <div class="rule-number">12</div>
             <h2>RQ Rule</h2>
-            <p>Teknik direktör komutu olmadan (değişiklik vs.), bir sebebi olmadan ayrılan oyunculara moderatör hükmüyle 1 maç ceza verilir.</p>
+            <p>Teknik direktör komutu olmadan (değişiklilik vs.), bir sebebi olmadan ayrılan oyunculara moderatör hükmüyle 1 maç ceza verilir.</p>
         </div>
+        <!-- Kural 13 -->
         <div class="rule">
             <div class="rule-number">13</div>
             <h2>Maç Oynanması</h2>
-            <p>Her takımda en az 3 oyuncu olmak zorundadır, aksi takdirde auto verilir. Eğer karşı takım 10 dakika içinde gelmezse bekleyen takıma auto verilir. Eğer 2 takımda gelmezse 2 takıma da 1 puan verilir.</p>
+            <p>Her takımda en az 3 oyuncu olmak zorundadır, aksi taktirde auto verilir. Eğer karşı takım 10 dakika içinde gelmezse bekleyen takıma auto verilir. Eğer 2 takımda gelmezse 2 takıma da 1 puan verilir.</p>
         </div>
+        <!-- Kural 14 -->
         <div class="rule">
             <div class="rule-number">14</div>
             <h2>Kırmızı Kart</h2>
-            <p>2 yc'den rc yerseniz maçtan çıkmak zorundasınız. Eğer hakem söyledikten sonra maçtan çıkmayıp topa dokunursanız direkt auto verilir. Kırmızının cezası 1 maçtır, lig ve kupa maçları aynı kabul edilir.</p>
+            <p>2 yc’den rc yerseniz maçtan çıkmak zorundasınız. Eğer hakem söyledikten sonra maçtan çıkmayıp topa dokunursanız +1 gol verilir.</p>
         </div>
+        <!-- Kural 15 -->
         <div class="rule">
             <div class="rule-number">15</div>
-            <h2>Kaçak Oyuncu</h2>
-            <p>Ligde olmayan, takımda olmayan oyuncu oynarsa karşı takıma auto verilir. Eğer karşı takım bunu bilmeden oynarsa o zaman diğer takımın oynadığı oyuncu da geçersiz sayılacaktır. (Hikayeyi ne kadar değiştirme veya yalan söyleme hakkınız yoktur)</p>
+            <h2>Küfür</h2>
+            <p>Kesinlikle küfür edilmemelidir ve cezalandırılır. Herhangi birinin küfür etmesi halinde 1. uyarı yapılır, 2. uyarıda 1 puan silinir. 3. uyarıda ise ceza uygulanır ve maçın sonuna kadar takip edilir.</p>
+        </div>
+        <!-- Kural 16 -->
+        <div class="rule">
+            <div class="rule-number">16</div>
+            <h2>Mesajlaşma</h2>
+            <p>Herhangi bir şekilde oyun dışı yazışmalar yapılmamalıdır. Oyun içinde oyuncular, oyun dışında ve takımda dışarıdan başka kişi olmalıdır.</p>
+        </div>
+        <!-- Kural 17 -->
+        <div class="rule">
+            <div class="rule-number">17</div>
+            <h2>İçki ve Alkol</h2>
+            <p>Oyun oynarken alkol alması yasaktır. Bu tespit edildiğinde maçtan cezalı sayılacaktır.</p>
+        </div>
+        <!-- Kural 18 -->
+        <div class="rule">
+            <div class="rule-number">18</div>
+            <h2>Oyun Dışı Müdahale</h2>
+            <p>Maç sırasında oyuncuların dışarıdan müdahale etmesi yasaktır. Herhangi bir dış müdahalede +1 gol eklenir.</p>
+        </div>
+        <!-- Kural 19 -->
+        <div class="rule">
+            <div class="rule-number">19</div>
+            <h2>Sürekli Sesli Konuşma</h2>
+            <p>Oyun sırasında sürekli sesli konuşmalar yapılmamalıdır. Bu oyuncuya uyarı yapılacaktır.</p>
+        </div>
+        <!-- Kural 20 -->
+        <div class="rule">
+            <div class="rule-number">20</div>
+            <h2>Tehdit</h2>
+            <p>Herhangi bir oyuncu tehdit edilirse bu çok ciddi bir kural ihlali sayılır ve oyundan atılmaya kadar gidebilir.</p>
+        </div>
+        <!-- Kural 21 -->
+        <div class="rule">
+            <div class="rule-number">21</div>
+            <h2>Hakem Hakları</h2>
+            <p>Hakemin verdiği kararlar son karardır. Hakem kararına itiraz edilmemelidir.</p>
+        </div>
+        <!-- Kural 22 -->
+        <div class="rule">
+            <div class="rule-number">22</div>
+            <h2>Misafir Takım</h2>
+            <p>Misafir takımda oynayan oyuncular, kendi takımından bağımsız olarak hareket etmelidir. Bu takımlar için belirli kurallar vardır ve bunlara uymak zorunludur.</p>
+        </div>
+        <!-- Kural 23 -->
+        <div class="rule">
+            <div class="rule-number">23</div>
+            <h2>Lag</h2>
+            <p>Bir oyuncu lag nedeniyle oyunu bozarsa, oyun durdurulup oyuncuya uyarı verilecektir. 3. kez tekrarı halinde oyun iptal edilebilir.</p>
+        </div>
+        <!-- Kural 24 -->
+        <div class="rule">
+            <div class="rule-number">24</div>
+            <h2>Şüpheli Davranışlar</h2>
+            <p>Şüpheli davranışlarda bulunan oyunculara soruşturma açılabilir ve oyun hakları geçici olarak elinden alınabilir.</p>
+        </div>
+        <!-- Kural 25 -->
+        <div class="rule">
+            <div class="rule-number">25</div>
+            <h2>Takım Çalışması</h2>
+            <p>Oyun sırasında takım çalışması yapılması zorunludur. Her oyuncu, takım arkadaşlarına yardım etmelidir.</p>
+        </div>
+        <!-- Kural 26 -->
+        <div class="rule">
+            <div class="rule-number">26</div>
+            <h2>Kurallara Uymama</h2>
+            <p>Oyun kurallarına uymamak ceza gerektirir ve her ceza, bir öncekilerden daha ağır olacaktır.</p>
+        </div>
+        <!-- Kural 27 -->
+        <div class="rule">
+            <div class="rule-number">27</div>
+            <h2>Oyuncu Değişikliği</h2>
+            <p>Oyuncu değişikliği sadece maçın başında yapılabilir. Maç sırasında oyuncu değişikliği yapılmaz.</p>
+        </div>
+        <!-- Kural 28 -->
+        <div class="rule">
+            <div class="rule-number">28</div>
+            <h2>Ofsayt Kuralı</h2>
+            <p>Ofsayt durumu her zaman geçerlidir. Kurallara uymayan ofsaytlar cezalandırılacaktır.</p>
+        </div>
+        <!-- Kural 29 -->
+        <div class="rule">
+            <div class="rule-number">29</div>
+            <h2>Hızlı Faul</h2>
+            <p>Faul yapılırken oyun hızına müdahale edilirse, oyun iptal edilebilir.</p>
+        </div>
+        <!-- Kural 30 -->
+        <div class="rule">
+            <div class="rule-number">30</div>
+            <h2>Varlık Kontrolü</h2>
+            <p>Her oyuncu, oyun içinde tüm eşyaların geçerli olduğunu doğrulamalıdır. Aksi halde haksız avantaj sağlanabilir.</p>
+        </div>
+        <!-- Kural 31 -->
+        <div class="rule">
+            <div class="rule-number">31</div>
+            <h2>Yasaklı Ekipman</h2>
+            <p>Yasaklı ekipman kullanımı her zaman cezalandırılır. Hangi ekipmanların yasak olduğu organizatörler tarafından belirlenir.</p>
+        </div>
+        <!-- Kural 32 -->
+        <div class="rule">
+            <div class="rule-number">32</div>
+            <h2>Oyun Sonucu</h2>
+            <p>Oyunun sonlanması durumunda, organizatörlerin belirlediği kurallar geçerlidir.</p>
+        </div>
+        <!-- Kural 33 -->
+        <div class="rule">
+            <div class="rule-number">33</div>
+            <h2>Maçta Yer Almak</h2>
+            <p>Bir oyuncu, eğer maçta yer almazsa, takıma cezai yükümlülükler gelebilir. Aynı takımda çok fazla değişiklik yapılması da sorun yaratabilir.</p>
+        </div>
+        <!-- Kural 34 -->
+        <div class="rule">
+            <div class="rule-number">34</div>
+            <h2>Yanlış Yönetim</h2>
+            <p>Yanlış yönetilen maçlar tekrar yapılabilir ve bu takımın ceza almasına yol açabilir.</p>
+        </div>
+        <!-- Kural 35 -->
+        <div class="rule">
+            <div class="rule-number">35</div>
+            <h2>İçeriği Paylaşmak</h2>
+            <p>Oyun içinde özel bilgilerin ve içeriklerin dışarıya aktarılması yasaktır.</p>
+        </div>
+        <!-- Kural 36 -->
+        <div class="rule">
+            <div class="rule-number">36</div>
+            <h2>Yorumlar</h2>
+            <p>Oyun sırasında yapılan yorumlar yapıcı ve saygılı olmalıdır. Herhangi bir olumsuz yorumda ceza uygulanabilir.</p>
         </div>
     </div>
 
     <footer>
-        <p>© 2025 FFA Maç Kuralları. Tüm hakları saklıdır.</p>
+        <p>FFA League | Tüm Haklar Saklıdır.</p>
     </footer>
 </body>
 </html>
