--- a/kural.html
+++ b/kural.html
@@ -1,57 +1,99 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FFA Maç Kuralları</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Rubik+Mono+One&display=swap');
+
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            font-family: 'Press Start 2P', cursive;
+            background: radial-gradient(circle, #3b0764, #1e0035);
+            color: #e2e8f0;
+            overflow-x: hidden;
         }
-        header {
-            background-color: #2c3e50;
-            color: white;
-            padding: 15px 0;
+
+        h1 {
             text-align: center;
+            font-size: 3.5rem;
+            margin-top: 20px;
+            color: #ff79c6;
+            animation: neonGlow 3s infinite alternate;
         }
-        .content {
-            margin: 20px;
+
+        @keyframes neonGlow {
+            0% {
+                text-shadow: 0 0 5px #ff79c6, 0 0 10px #ff79c6, 0 0 20px #bd93f9, 0 0 30px #bd93f9;
+            }
+            100% {
+                text-shadow: 0 0 10px #ff79c6, 0 0 20px #ff79c6, 0 0 40px #bd93f9, 0 0 50px #bd93f9;
+            }
         }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.8);
+            border: 2px solid #ff79c6;
+            border-radius: 15px;
+            box-shadow: 0 0 15px #ff79c6;
+        }
+
         .rule {
-            background-color: white;
-            padding: 15px;
-            margin-bottom: 10px;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            background: rgba(60, 0, 85, 0.9);
+            border: 2px solid #bd93f9;
+            padding: 20px;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            transition: transform 0.3s, box-shadow 0.3s;
+            position: relative;
         }
+
+        .rule:hover {
+            transform: rotate(-1deg) scale(1.05);
+            box-shadow: 0 0 20px #ff79c6;
+        }
+
+        .rule h2 {
+            margin: 0;
+            color: #ffb86c;
+            font-size: 1.8rem;
+            text-transform: uppercase;
+        }
+
+        .rule p {
+            margin: 10px 0 0;
+            font-size: 1.2rem;
+            line-height: 1.6;
+        }
+
         .rule-number {
-            font-size: 1.5em;
-            color: #e74c3c;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-        h2 {
-            color: #34495e;
-        }
-        footer {
-            background-color: #2c3e50;
-            color: white;
-            text-align: center;
+            position: absolute;
+            top: -15px;
+            left: -15px;
+            background: #ff5555;
+            color: #fff;
+            font-size: 1.2rem;
             padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
+            border-radius: 50%;
+            box-shadow: 0 0 10px #ff5555;
+        }
+
+        footer {
+            text-align: center;
+            padding: 15px 0;
+            background: #1e0035;
+            color: #8be9fd;
+            font-size: 1rem;
+            border-top: 2px solid #bd93f9;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>FFA Maç Kuralları</h1>
-    </header>
+    <h1>FFA Maç Kuralları</h1>
 
     <div class="content">
         <div class="rule">
