--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <!-- Video Ekleme Alanı -->
         <div class="video-container">
             <video controls>
-                <source src="https://cdn.discordapp.com/attachments/1196893026635743323/1325827004968468520/ssstik.io_thunderrbreak_1729334131687.mp4?ex=677ddcde&is=677c8b5e&hm=7606838e13e9b11f0a18e3ef20428dcbfcf8c1e492f881998d22bf9aca340c6e&" type="video/mp4">
+                <source src="https://cdn.discordapp.com/attachments/1212860383308554251/1327778253813059697/ssstik.io_mauroege.9_1736574125297.mp4?ex=67844d5c&is=6782fbdc&hm=f6ce47c172d9edb1aa4a2d634faebbb90e4cb5737f50c8d3cdefeb77f62a76b2&" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
