--- a/index.html
+++ b/index.html
@@ -133,11 +133,10 @@
             background: rgba(255, 255, 255, 0.2);
         }
 
-        /* Video Stili */
         .video-container {
             width: 80%;
             max-width: 500px;
-            height: 500px; /* Kare boyut */
+            height: 500px; 
             margin-top: 50px;
             position: relative;
             background-color: rgba(255, 255, 255, 0.1);
@@ -145,11 +144,11 @@
             border-radius: 15px;
             box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
             display: flex;
-            justify-content: center; /* Ortalamak için */
+            justify-content: center; 
             align-items: center;
             margin-bottom: 20px;
-            margin-left: auto; /* Ortalamak için sağa kaydır */
-            margin-right: auto; /* Ortalamak için sola kaydır */
+            margin-left: auto; 
+            margin-right: auto; 
         }
 
         video {
@@ -215,11 +214,6 @@
     </style>
 </head>
 <body>
-
-    <div>
-        <h1>Hayat Olmasada</h1>
-        <p>Seninle Güzel</p>
-
         <div class="gallery">
             <div class="image-container">
                 <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Resim 1" onclick="openFullscreen(this)">
