--- a/bypass.html
+++ b/bypass.html
@@ -19,57 +19,58 @@
         const page_url = 'https://onlyfans.com/api2/v2/users/login'; // The page URL that has the CAPTCHA
 
         // Step 1: Request CAPTCHA solution
-        function solveCaptcha() {
+    function solveCaptcha() {
+        $.ajax({
+            url: 'https://2captcha.com/in.php',  // 2Captcha's API endpoint with HTTPS
+            type: 'POST',
+            data: {
+                key: api_key,
+                method: 'userrecaptcha', // CAPTCHA type
+                googlekey: site_key,
+                pageurl: page_url,
+                json: 1
+            },
+            success: function(response) {
+                if (response.status === 1) {
+                    const captcha_id = response.request;
+                    console.log("Captcha çözüm ID:", captcha_id);
+                    getCaptchaSolution(captcha_id);
+                } else {
+                    console.error("Captcha çözümü talebinde bir hata oluştu.");
+                }
+            },
+            error: function() {
+                console.error("API'ye bağlanırken bir hata oluştu.");
+            }
+        });
+    }
+    
+    // Step 2: Get CAPTCHA solution
+    function getCaptchaSolution(captcha_id) {
+        const interval = setInterval(function() {
             $.ajax({
-                url: 'http://2captcha.com/in.php',  // 2Captcha's API endpoint
-                type: 'POST',
+                url: 'https://2captcha.com/res.php',  // 2Captcha's API endpoint for solution with HTTPS
+                type: 'GET',
                 data: {
                     key: api_key,
-                    method: 'userrecaptcha', // CAPTCHA type
-                    googlekey: site_key,
-                    pageurl: page_url,
+                    action: 'get',
+                    id: captcha_id,
                     json: 1
                 },
                 success: function(response) {
                     if (response.status === 1) {
-                        const captcha_id = response.request;
-                        console.log("Captcha çözüm ID:", captcha_id);
-                        getCaptchaSolution(captcha_id);
+                        const captchaSolution = response.request;
+                        console.log("Captcha çözümü:", captchaSolution);
+                        clearInterval(interval);
+                        displayCaptchaSolution(captchaSolution);
                     } else {
-                        console.error("Captcha çözümü talebinde bir hata oluştu.");
+                        console.log("Captcha çözümü henüz hazır değil. Yeniden deniyorum...");
                     }
-                },
-                error: function() {
-                    console.error("API'ye bağlanırken bir hata oluştu.");
                 }
             });
-        }
+        }, 5000); // Check every 5 seconds
+    }
 
-        // Step 2: Get CAPTCHA solution
-        function getCaptchaSolution(captcha_id) {
-            const interval = setInterval(function() {
-                $.ajax({
-                    url: 'http://2captcha.com/res.php',  // 2Captcha's API endpoint for solution
-                    type: 'GET',
-                    data: {
-                        key: api_key,
-                        action: 'get',
-                        id: captcha_id,
-                        json: 1
-                    },
-                    success: function(response) {
-                        if (response.status === 1) {
-                            const captchaSolution = response.request;
-                            console.log("Captcha çözümü:", captchaSolution);
-                            clearInterval(interval);
-                            displayCaptchaSolution(captchaSolution);
-                        } else {
-                            console.log("Captcha çözümü henüz hazır değil. Yeniden deniyorum...");
-                        }
-                    }
-                });
-            }, 5000); // Check every 5 seconds
-        }
 
         // Display the CAPTCHA solution on the page
         function displayCaptchaSolution(solution) {
