--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <!-- Video Ekleme Alanı -->
         <div class="video-container">
             <video controls>
-                <source src="https://cdn.discordapp.com/attachments/1212860383308554251/1327778253813059697/ssstik.io_mauroege.9_1736574125297.mp4?ex=67844d5c&is=6782fbdc&hm=f6ce47c172d9edb1aa4a2d634faebbb90e4cb5737f50c8d3cdefeb77f62a76b2&" type="video/mp4">
+                <source src="https://cdn.discordapp.com/attachments/1297631248507736085/1331975971313684511/AQNvulr2tH7V0l_Nvt3cdGclObv2Zbimx1_Gaki1MQftmQ9p_wEkwrWf4ZSUKJhD4UwfePCbQkTbusMAlQjV8VqXwA1MQwaN9a5W4e4.mp4?ex=679392ca&is=6792414a&hm=5f6e630bdd7b566c24f3526f7ab102214447a47445e06c21e948fda04596923e&" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
