--- a/deneme.html
+++ b/deneme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium İnek Çiftliği | Kaliteli İnek Satışı</title>
+    <title> İnek Çiftliği | Kaliteli İnek Satışı</title>
     <style>
         /* Genel Stiller */
         * {
